@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -47,7 +47,6 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.RejectedExecutionException;
 import java.util.stream.Stream;
 
-import jdk.internal.javac.PreviewFeature;
 import jdk.internal.misc.CarrierThreadLocal;
 import jdk.internal.module.ServicesCatalog;
 import jdk.internal.reflect.ConstantPool;
@@ -66,6 +65,11 @@ public interface JavaLangAccess {
      * and parameter types.
      */
     List<Method> getDeclaredPublicMethods(Class<?> klass, String name, Class<?>... parameterTypes);
+
+    /**
+     * Return most specific method that matches name and parameterTypes.
+     */
+    Method findMethod(Class<?> klass, boolean publicOnly, String name, Class<?>... parameterTypes);
 
     /**
      * Return the constant pool for a class.
@@ -267,6 +271,12 @@ public interface JavaLangAccess {
     Module addEnableNativeAccess(Module m);
 
     /**
+     * Updates module named {@code name} in layer {@code layer} to allow access to restricted methods.
+     * Returns true iff the given module exists in the given layer.
+     */
+    boolean addEnableNativeAccess(ModuleLayer layer, String name);
+
+    /**
      * Updates all unnamed modules to allow access to restricted methods.
      */
     void addEnableNativeAccessToAllUnnamed();
@@ -356,6 +366,15 @@ public interface JavaLangAccess {
     char getUTF16Char(byte[] bytes, int index);
 
     /**
+     * Put the char at index in a byte[] in internal UTF-16 representation,
+     * with no bounds checks.
+     *
+     * @param bytes the UTF-16 encoded bytes
+     * @param index of the char to retrieve, 0 <= index < (bytes.length >> 1)
+     */
+    void putCharUTF16(byte[] bytes, int index, int ch);
+
+    /**
      * Encode the given string into a sequence of bytes using utf8.
      *
      * @param s the string to encode
@@ -409,6 +428,12 @@ public interface JavaLangAccess {
     MethodHandle stringConcatHelper(String name, MethodType methodType);
 
     /**
+     * Prepends constant and the stringly representation of value into buffer,
+     * given the coder and final index. Index is measured in chars, not in bytes!
+     */
+    long stringConcatHelperPrepend(long indexCoder, byte[] buf, String value);
+
+    /**
      * Get the string concat initial coder
      */
     long stringConcatInitialCoder();
@@ -418,23 +443,10 @@ public interface JavaLangAccess {
      */
     long stringConcatMix(long lengthCoder, String constant);
 
-   /**
-    * Get the coder for the supplied character.
-    */
-   @PreviewFeature(feature=PreviewFeature.Feature.STRING_TEMPLATES)
-   long stringConcatCoder(char value);
-
-   /**
-    * Update lengthCoder for StringBuilder.
-    */
-   @PreviewFeature(feature=PreviewFeature.Feature.STRING_TEMPLATES)
-   long stringBuilderConcatMix(long lengthCoder, StringBuilder sb);
-
     /**
-     * Prepend StringBuilder content.
+     * Mix value length and coder into current length and coder.
      */
-    @PreviewFeature(feature=PreviewFeature.Feature.STRING_TEMPLATES)
-   long stringBuilderConcatPrepend(long lengthCoder, byte[] buf, StringBuilder sb);
+    long stringConcatMix(long lengthCoder, char value);
 
     /**
      * Join strings
@@ -447,6 +459,12 @@ public interface JavaLangAccess {
      * @see java.lang.invoke.MethodHandles.Lookup#defineHiddenClass(byte[], boolean, MethodHandles.Lookup.ClassOption...)
      */
     Object classData(Class<?> c);
+
+    int stringSize(long i);
+
+    int getCharsLatin1(long i, int index, byte[] buf);
+
+    int getCharsUTF16(long i, int index, byte[] buf);
 
     long findNative(ClassLoader loader, String entry);
 
@@ -573,39 +591,6 @@ public interface JavaLangAccess {
                                        Continuation continuation);
 
     /**
-     * {@return the primary class for a primitive class}
-     *
-     * @param klass a class
-     */
-    Class<?> asPrimaryType(Class<?> klass);
-
-    /**
-     * {@return the value type of a primitive class}
-     *
-     * @param klass a class
-     */
-    Class<?> asValueType(Class<?> klass);
-
-    /**
-     * {@return true if the class is the primary type of a primitive class}
-     *
-     * @param klass a class
-     */
-    boolean isPrimaryType(Class<?> klass);
-
-    /**
-     * {@return true if the class is the primary type of a primitive class}
-     *
-     * @param klass a class
-     */
-    boolean isPrimitiveValueType(Class<?> klass);
-
-    /**
-     * Returns {@code true} if this class is a primitive class.
-     */
-    boolean isPrimitiveClass(Class<?> klass);
-
-    /**
      * Returns the class file format version of the class.
      */
     int classFileFormatVersion(Class<?> klass);
@@ -625,4 +610,10 @@ public interface JavaLangAccess {
      * Are the string bytes compatible with the given charset?
      */
     boolean bytesCompatible(String string, Charset charset);
+
+    /**
+     * Is a security manager already set or allowed to be set
+     * (using -Djava.security.manager=allow)?
+     */
+    boolean allowSecurityManager();
 }
